--- a/LMS-sb/src/main/resources/application.properties
+++ b/LMS-sb/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.database-platform=${DATABASE_DIALECT}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
