--- a/LMS-sb/src/main/resources/application.properties
+++ b/LMS-sb/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD}
