Security features added

--- a/LMS-sb/src/main/resources/application.properties
+++ b/LMS-sb/src/main/resources/application.properties
@@ -9,3 +9,5 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 admin.email=${ADMIN_EMAIL}
 admin.password=${ADMIN_PASSWORD}
+maximum.login.attempts=5
+password.expiry.days=30
